0.04 -- Fri Jul 18 15:23 CEST 2008
    * Fixed for perl 5.6 and 5.005 threads (tested)

0.03 -- Wed Feb 20 20:19 CET 2008
    * Fixed crash when trying to rename xsubs
    * As a side-effect, should work with 5.005 threads (untested)

0.02 -- Wed Aug 18 19:51 CEST 2004
    * Fixed documentation, which erroneously mentioned the existance of
      two exported functions.